--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "npm run compile && npm run server",
+    "server": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "babel src --presets @babel/preset-react --out-dir public --watch --verbose",    
     "compile": "babel src --presets @babel/react --out-dir public"
